update docs, all works
